// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing TwitterShare Component renders correctly with blue color 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 48px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 44px;
  height: 44px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
  text-align: center;
  color: #1976d2;
}

.emotion-3.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-undefined emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-item emotion-1"
  >
    <a
      href="https://twitter.com/intent/tweet?text=Look at my prediction market here: https://tzconnect.com/prediction-market/10/is-this-a-bear"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="twitter-share"
        src="/icons/social/twitter-blue.svg"
      />
    </a>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item emotion-2"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3  emotion-3"
      lines={3}
    >
      Share Now
    </h3>
  </div>
</div>
`;

exports[`Snapshot Testing TwitterShare Component renders correctly with grey color 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 48px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 44px;
  height: 44px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
  text-align: center;
  color: #1976d2;
}

.emotion-3.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-undefined emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-item emotion-1"
  >
    <a
      href="https://twitter.com/intent/tweet?text=Look at my prediction market here: https://tzconnect.com/prediction-market/10/is-this-a-bear"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="twitter-share"
        src="/icons/social/twitter-grey.svg"
      />
    </a>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item emotion-2"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3  emotion-3"
      lines={3}
    >
      Share Now
    </h3>
  </div>
</div>
`;

exports[`Snapshot Testing TwitterShare Component renders correctly without title 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 48px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 44px;
  height: 44px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
  text-align: center;
  color: #1976d2;
}

.emotion-3.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-undefined emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-item emotion-1"
  >
    <a
      href="https://twitter.com/intent/tweet?text=without title"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="twitter-share"
        src="/icons/social/twitter-grey.svg"
      />
    </a>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item emotion-2"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3  emotion-3"
      lines={3}
    >
      Share
    </h3>
  </div>
</div>
`;
